--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,7 @@
     <color name="colorPrimary">#e20000</color>
     <color name="colorPrimaryDark">#7d0000</color>
     <color name="colorAccent">#b9120d</color>
+    <color name="colorGrey">#A0A0A0</color>
+    <color name="colorWhite">#FFFFFF</color>
+    <color name="colorBlack">#000000</color>
 </resources>
