--- a/app/src/main/res/layout/fragment_offer_description.xml
+++ b/app/src/main/res/layout/fragment_offer_description.xml
@@ -234,7 +234,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="6dp"
                 android:gravity="center"
-                android:text="Contacter"
+                android:text="@string/contact"
                 android:textColor="@color/colorWhite"
                 android:textSize="12sp"
                 android:textStyle="bold" />
