--- a/app/src/main/res/layout/fragment_offer_light_item_list.xml
+++ b/app/src/main/res/layout/fragment_offer_light_item_list.xml
@@ -10,4 +10,5 @@
     app:layoutManager="LinearLayoutManager"
     tools:context=".OfferLightListFragment"
     tools:listitem="@layout/fragment_offer_light_item"
+    android:paddingBottom="6dp"
     android:background="@color/colorGrey" />
